glx/testdata/invalid/missing-vocabularies/persons/person-abc123.glx
persons:
  person-abc123:
    properties:
      name:
        value: "Test Person"
        fields:
          given: "Test"
          surname: "Person"
